--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_WORKSPACE_URL=$CLIENT_URL
+NEXT_PUBLIC_WORKSPACE_URL=https://polygon-mainnet.infura.io/v3/dbd98a18a03b41f8ad528d7e47ca01dd
